src/objects/Apttus_QPConfig__ProposalFootnote__c.object
<CustomObject>
    <description>Represents the footnote available in a quote/proposal</description>
    <fields>
        <fullName>Apttus_QPConfig__FootnoteBody__c</fullName>
        <description>The body of the footnote</description>
        <inlineHelpText>The body of the footnote</inlineHelpText>
        <label>Footnote Body</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_QPConfig__FootnoteId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated footnote</description>
        <inlineHelpText>ID of the associated footnote</inlineHelpText>
        <label>Footnote</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Apttus_Config2__Footnote__c.Apttus_Config2__Type__c</field>
                <operation>equals</operation>
                <value>Product, Quote</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Apttus_Config2__Footnote__c</referenceTo>
        <relationshipLabel>Proposal Footnotes</relationshipLabel>
        <relationshipName>QuoteFootnotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_QPConfig__FootnoteText__c</fullName>
        <description>The footnote text</description>
        <label>Footnote Text (Deprecated)</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Apttus_QPConfig__FootnoteType__c</fullName>
        <description>The footnote type</description>
        <formula>TEXT(Apttus_QPConfig__FootnoteId__r.Apttus_Config2__Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Footnote Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_QPConfig__ProductId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the product/option associated with the footnote</description>
        <inlineHelpText>ID of the product/option associated with the footnote</inlineHelpText>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipName>QuoteFootnotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_QPConfig__ProposalId__c</fullName>
        <description>ID of the associated quote/proposal</description>
        <inlineHelpText>ID of the associated quote/proposal</inlineHelpText>
        <label>Quote/Proposal</label>
        <referenceTo>Apttus_Proposal__Proposal__c</referenceTo>
        <relationshipName>QuoteFootnotes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Apttus_QPConfig__Sequence__c</fullName>
        <description>The footnote display sequence</description>
        <inlineHelpText>The footnote display sequence</inlineHelpText>
        <label>Sequence</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Proposal Footnote</label>
    <nameField>
        <displayFormat>QF-{000000}</displayFormat>
        <label>Footnote Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Proposal Footnotes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>